cmake_minimum_required(VERSION 3.2)
project(haproxy)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

include_directories(include ebtree)

set(SOURCE_FILES
    contrib/base64/base64rev-gen.c
    contrib/halog/fgets2.c
    contrib/halog/halog.c
    contrib/ip6range/ip6range.c
    contrib/iprange/iprange.c
    ebtree/compiler.h
    ebtree/eb32tree.c
    ebtree/eb32tree.h
    ebtree/eb64tree.c
    ebtree/eb64tree.h
    ebtree/ebimtree.c
    ebtree/ebimtree.h
    ebtree/ebistree.c
    ebtree/ebistree.h
    ebtree/ebmbtree.c
    ebtree/ebmbtree.h
    ebtree/ebpttree.c
    ebtree/ebpttree.h
    ebtree/ebsttree.c
    ebtree/ebsttree.h
    ebtree/ebtree.c
    ebtree/ebtree.h

    src/51d.c
    src/acl.c
    src/applet.c
    src/arg.c
    src/auth.c
    src/backend.c
    src/base64.c
    src/buffer.c
    src/cfgparse.c
    src/channel.c
    src/checks.c
    src/chunk.c
    src/compression.c
    src/connection.c
    src/da.c
    src/dns.c
    src/dumpstats.c
    src/ev_epoll.c
    src/ev_kqueue.c
    src/ev_poll.c
    src/ev_select.c
    src/fd.c
    src/freq_ctr.c
    src/frontend.c
    src/haproxy-systemd-wrapper.c
    src/haproxy.c
    src/hash.c
    src/hdr_idx.c
    src/hlua.c
    src/i386-linux-vsys.c
    src/lb_chash.c
    src/lb_fas.c
    src/lb_fwlc.c
    src/lb_fwrr.c
    src/lb_map.c
    src/listener.c
    src/log.c
    src/lru.c
    src/mailers.c
    src/map.c
    src/memory.c
    src/namespace.c
    src/pattern.c
    src/payload.c
    src/peers.c
    src/pipe.c
    src/proto_http.c
    src/proto_tcp.c
    src/proto_udp.c
    src/proto_uxst.c
    src/protocol.c
    src/proxy.c
    src/queue.c
    src/raw_sock.c
    src/rbtree.c
    src/regex.c
    src/sample.c
    src/server.c
    src/session.c
    src/shctx.c
    src/signal.c
    src/ssl_sock.c
    src/standard.c
    src/stick_table.c
    src/stream.c
    src/stream_interface.c
    src/task.c
    src/time.c
    src/trace.c
    src/uri_auth.c
    src/vars.c
    src/xxhash.c
    tests/filltab25.c
    tests/ip-hash.c
    tests/reset.c
    tests/test-arg.c
    tests/test.c
    tests/test_hashes.c
    tests/test_pools.c
    tests/testinet.c
    tests/uri_hash.c)

add_executable(haproxy ${SOURCE_FILES})